# OPtions

./: .cursorrules  .env.example  .gitignore  .vercelignore  AGENTIC_TERMINAL_MASTER_MANUAL.md  AGENTS.md  AGENT_LOG.md  CLAUDE.md  README.md  activeContext.md  app.py  findings.md  productContext.md  progress.md  projectbrief.md  pyproject.toml  pytest.ini  requirements.txt  scratch_phase6_direct.py  scratch_phase6_test.py  scratch_sector_analysis.py  scratch_sector_deep_dive.py  scratch_test.py  sector_analysis_results.json  server.err  start_trial.bat  systemPatterns.md  system_diagnostics.py  system_test_direct.py  task_plan.md  techContext.md  vercel.json
.github/: pull_request_template.md
backend/: api_contracts.md  core_agents  main.py  requirements.txt
core_agents/: orchestrator.py
episodic_state/: README.md  episodes.db  init_db.py  schema.sql  verify_db.py
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
memory/: agent_memory.json  db_setup.py  paper_portfolio.json
memory_graph/: edges.jsonl  extraction_map.md  nodes.jsonl  schema.json
openviking/: memory_migration_inventory.md
orchestration/: AGENT_EFFICIENCY_POLICY.md  CROSS_PLATFORM_SYNCHRONIZATION_RUNBOOK.md  UNIVERSAL_ORCHESTRATOR_MASTER_PROMPT.md
review/: GOVERNANCE_FRAMEWORK.md  REVIEW_MASTER_TRACKER.md
scripts/: baseline_metrics.py  run_qaqc_loop.py  seed_failure_registry.py  validate_batch_backtest.py  validate_memory_consistency.py  validate_regression.py
skills/: backtester.py  backtester_audit.py  brokers.py  (+20 more)
(+86 files in other folders)
