[project]
name = "institutional-options-terminal"
version = "2.0.0"
description = "Agentic quant terminal — FastAPI backend + Vite frontend"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "yfinance",
  "pandas",
  "numpy",
  "scipy",
  "openai",
  "python-dotenv",
  "statsmodels",
  "hmmlearn",
  "scikit-learn",
  "fredapi",
  "httpx",
  "pytest",
]

[project.scripts]
app = "backend.main:app"
